--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Data folder may be too big to push
 data/24-25_PL_Data_raw/
+data/24-25_PL_Data/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
