--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ FootyLiveliness-Report.mp4
 *.tex
 
 # Data folder may be too big to push
+data/24-25_PL_Data_csv/
 data/24-25_PL_Data_raw/
 data/24-25_PL_Data/
 data/feature_tables
