Add model files for Render deployment

--- a/Final_Submission/4_Web_Application/footy-liveliness-web/.gitignore
+++ b/Final_Submission/4_Web_Application/footy-liveliness-web/.gitignore
@@ -25,7 +25,12 @@ yarn-error.log*
 # Python
 *.pyc
 __pycache__/
-*.pkl
 *.log
 venv/
 env/
+
+# Keep model files for deployment
+!model.pkl
+!scaler.pkl
+!feature_names.pkl
+!team_stats.pkl
